# RXQuery

./: .Rbuildignore  Changes  DESCRIPTION  NAMESPACE  Todo.xml  configure  configure.in
R/: classes.R  collection.R  context.R  converter.R  item.R  register.R  version.R  xquery.R
TU/: Makefile  tu.R  tu.rda  zorba.cpp
Web/: GNUmakefile  index.html.in
expt/: Makefile  run.cpp
inst/doc/: thoughts.Rdb
inst/sampleDocs/: books.xml  ns.xml
inst/sampleDocs/bills/: README  s21.xml  s22.xml  s23.xml  s24.xml  s25.xml  s26.xml  s27.xml  s28.xml  s29.xml  s31.xml  s32.xml  s33.xml  s34.xml  s35.xml  s36.xml  s37.xml  s38.xml  s39.xml  s41.xml  s42.xml  s43.xml  s44.xml  s45.xml  s46.xml  s47.xml  s48.xml  s49.xml  s51.xml  s52.xml  s53.xml  s54.xml  s55.xml  s56.xml  s57.xml  s58.xml  s59.xml  s61.xml  s62.xml  s63.xml  (+33 more)
man/: XQueryClass.Rd  compileQuery.Rd  createCollection.Rd  getNodeKind.Rd  itemFactory.Rd  loadDocument.Rd  misc.Rd  registerFunctions.Rd  setVariable.Rd  xquery.Rd  zorba.Rd  zorbaVersion.Rd
src/: Collection.cpp  Item.cpp  Makevars  Makevars.in  RError.hpp  RModule.cpp  RModule.hpp  context.cpp  extFun.cpp  extFun.hpp  extModule.cpp  marshal.cpp  marshal.h  query.cpp  xmlManager.cpp  zorbaVersion.cpp
tests/: collections.R  defaultCollection.R  doc.R  docCollection.R  dyn.R  dynLookup.R  funcs.R  gcCollection.R  people.R  query.R  raw.R  reuseContext.R  rfuncs.R  rfuncsRepeated.R  separate.R  withContexts.R
tests/ToFix/: dynError.R
